[package]
name = "niced"
version = "0.2.0"
authors = ["Ian Page Hands <iphands@gmail.com>"]
edition = "2018"
description = "Keep it stupid simple renicing daemon"
homepage = "https://github.com/iphands/niced"
repository = "https://github.com/iphands/niced"
license-file = "LICENSE"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true
overflow-checks = false

[dependencies]
procfs = "0.8"
libc = "0.2"
